--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -53,7 +53,7 @@ RATSL <- RATSL %>%
 
 library(dplyr)
 library(tidyr)
-# Summary data with mean and standard error of weight by group and Time
+
 RATSL_std <- RATSL %>%
   dplyr::group_by(Group, Time) %>%
   summarise(mean = mean(Weight), sd = sd(Weight), n= n(), se = sd/sqrt(n)) %>% ungroup()
@@ -90,7 +90,7 @@ library(ggplot2)
 ggplot(RATSL, aes(x = Group, y = weightgain)) +
   geom_boxplot() +
   stat_summary(fun = "mean", geom = "point", shape=23, size=4, fill = "white") +
-  scale_y_continuous(name = "mean(weight), weeks 1-8")
+  scale_y_continuous(name = "weight gain")
 ```
 </br>The greatest overall weightgain has been in group 2, but there is a lot of variation. One rat has gained weight similarly as initially thinner rats from group 1. Since there are only four rats in group 2, and supposing this is not a measurement error, I would not recommend removing this outlier rat from the data.
 
